--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "cmdk": "1.0.4",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "8.5.1",
+    "firebase": "^11.8.1",
+    "firebase-admin": "^13.4.0",
     "input-otp": "1.4.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
